IAP/GKE-scenario/deploy-iap.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iap-party
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-iap
  labels:
    app: hello-iap
  namespace: iap-party
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-iap
  template:
    metadata:
      labels:
        app: hello-iap
    spec:
      containers:
        - name: helloitsme
          image: <link to Docker-image>   ############## REPLACE ###############
          ports: 
            - name: listenmain
              containerPort: 8080
              hostPort: 80
          resources:
            limits:
              cpu: 0.2
              memory: "10Mi"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "iap-back-config"}'
  labels:
    app: hello-iap
  name: iap-service
  namespace: iap-party
spec:
  selector:
    app: hello-iap
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iap-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: iap-gke
  labels:
    app: hello-iap
spec:
  tls:
  - secretName: https-certs
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: iap-service
          servicePort: 80
